compiler/tests/should-fail/MalformedProtocolAnnotation4.via
/* MalformedProtocolAnnotationError */

host alice

fun main() {
    val x:int@ZKP(prover = alice, verifiers = {}) = 5;
}
